--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 .site-container {
-  min-height: 100vh;
+  min-height: 100vh;  
+  background-position: center;
 }
 
 main {
@@ -23,19 +24,21 @@ main {
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .rating span {
   color: #f1b80c;
 }
-
 
 .product {
   border: 1px #404040 solid;
   margin: 1rem;
 }
+
 .product img {
   width: 100%;
   max-width: 400px;
 }
+
 .product-info {
   padding: 1rem;
 }
@@ -122,4 +125,47 @@ main {
 }
 button.thumbnail {
   padding: 0;
+}
+/* Download button */
+.dwn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  text-decoration: none;
+  border: 1px solid blue;
+  border-radius: 6px;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+  transition: background 0.5s;
+}
+
+/* Darker background on mouse-over */
+.dwn:hover {
+  background: #a0a0a0;
+}
+.copyright{
+  color: #fcfbfb;
+  width: 100%;
+  text-align: center;
+  padding: 10px 20px;
+  background: #262626;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+.contact-right{
+  position: relative;
+}
+.contact-right form{
+  width: 100%;
+}
+form input, form textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;   
+  padding: 10px;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
 }
